# stl2glb

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-tiny  LICENSE  README.md  build.sh  docker-compose-tiny.yml  docker-compose.yml  fix.sh  prepare.sh  quick-build.sh  run.sh  setup-vcpkg.sh  start.sh
include/stl2glb/: Converter.hpp  EnvironmentHandler.hpp  GLBWriter.hpp  Hasher.hpp  Logger.hpp  MinioClient.hpp  MinioClientConfig.hpp  MinioConnectionCheck.hpp  STLParser.hpp  Server.hpp  SimpleMinioClient.hpp
src/: Converter.cpp  EnvironmentHandler.cpp  GLBWriter.cpp  Hasher.cpp  Logger.cpp  MinioClient.cpp  STLParser.cpp  Server.cpp  SimpleMinioClient.cpp  main.cpp
